test/functions/resolution/errors/testBadCallCandidates.11.good
testBadCallCandidates.chpl:23: In method 'test':
testBadCallCandidates.chpl:24: error: unresolved call 'D.bar("hi")'
testBadCallCandidates.chpl:7: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:24: note: because method call receiver with type borrowed D
testBadCallCandidates.chpl:3: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:20: note: candidates are: D.type bar(x: int)
testBadCallCandidates.chpl:39: note:                 bar(x: D)
